[gd_scene load_steps=7 format=3 uid="uid://b0wxeveie0uk8"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_3gh0l"]
[ext_resource type="Script" path="res://components/CreateComponent/CreateComponent.gd" id="1_kb7p0"]
[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/SolidPanel.tres" id="2_wk6a5"]
[ext_resource type="Texture2D" uid="uid://bbennjke0ioen" path="res://assets/icons/Add.svg" id="3_o6iqq"]
[ext_resource type="Texture2D" uid="uid://b3hmh5jlggqxa" path="res://assets/icons/cross.svg" id="4_4f16f"]
[ext_resource type="StyleBox" uid="uid://csle20exwqtti" path="res://assets/PanelMenuBar.tres" id="4_bb7dp"]

[node name="CreateComponent" type="PanelContainer" node_paths=PackedStringArray("_class_tree", "_create_button", "_selection_label")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3gh0l")
theme_override_styles/panel = ExtResource("2_wk6a5")
script = ExtResource("1_kb7p0")
_class_tree = NodePath("VBoxContainer/ClassTree")
_create_button = NodePath("VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/HBoxContainer/Create")
_selection_label = NodePath("VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/SelectionLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_bb7dp")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "Create New Object:"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectionLabel" type="Label" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.775063, 0.775063, 0.775063, 1)
text_overrun_behavior = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Create" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Create"
icon = ExtResource("3_o6iqq")

[node name="Cancel" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "Cancel"
icon = ExtResource("4_4f16f")

[node name="ClassTree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/draw_relationship_lines = 1
theme_override_constants/parent_hl_line_width = 3
hide_root = true

[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/HBoxContainer/Create" to="." method="_create"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="item_activated" from="VBoxContainer/ClassTree" to="." method="_create"]
[connection signal="item_selected" from="VBoxContainer/ClassTree" to="." method="_on_class_tree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/ClassTree" to="." method="deselect_all"]
